--- a/index.htm
+++ b/index.htm
@@ -42,5 +42,14 @@
     <button id="final-btn">TE AMOOO!💘</button>
   </section>
  <script src="script.js"></script>
+<!-- Tela de senha -->
+<div id="senha-overlay">
+  <div id="senha-box">
+    <h2>Digite a senha</h2>
+    <input type="password" id="senha-input" placeholder="Senha">
+    <button onclick="verificarSenha()">Entrar</button>
+    <p id="erro"></p>
+  </div>
+</div>
 </body>
 </html>
