--- a/index.htm
+++ b/index.htm
@@ -2,54 +2,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Para Thii</title>
-
-  <!-- Fonte romântica para título -->
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-  <!-- Fonte Poppins para os parágrafos -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-
+  <title>ERROR 404 - DVD Screensaver</title>
   <link rel="stylesheet" href="style.css">
-  
 </head>
 <body>
-  <!-- Botão de música -->
-  <button id="music-btn">🎶 Tocar Música</button>
-  <audio id="bg-music" loop>
-    <!-- Substitua o caminho abaixo pelo SEU arquivo de música -->
-    <source src="sweet-child.mp3" type="audio/mpeg">
-  </audio>
 
-  <!-- Header -->
-  <header>
-    <h1 class="reveal">Querida Thifany,❤️</h1>
-  </header>
-
-  <!-- Carta -->
-  <section>
-    <p class="reveal">Já faz um bom tempo que não recebo mensagens suas então deduzi que meu Whatsapp está com algum defeito, por conta disso decidi um meio mais "tradicional" (eu queria usar pombos correio, mas o cara da agência me falou que não produzem mais desses). Enfim meu anjo, espero que essa carta a encontre bem, eu estou com muita saudades de você e quero saber como você está? Como tem sido os seus dias? O que tem feito e o que tem pensado? Confesso que os meus não andam muito bem...sem você na minha vida falta algo, entende? Sinto falta das suas mensagens carinhosas, dos seus surtos de raiva, dos seus "não me estressa" (quando você sabe que eu certamente vou, afinal você fica linda quando tá esquentadinha kkk), de te acompanhar até a aula de música e comer algo contigo depois (mesmo que "não precisa"), dos seus lindos olhos castanhos e de sentir o seu cabelo tão lindo e perfeito entre os meus dedos enquanto o acaricio. Bem minha princesa, é como eu te disse no dia 03 de julho às 23:50, por esse motivo meu coração anda quebrantado de tristeza por ter você tão distamte assim de mim. É como se fosssemos dois polos iguais de um ímã que se repelem. Me pergunto dia e noite onde posso ter falhado para te magoar tanto meu bem?</p>
-    <p class="reveal">Eu vi outro dia que o <a href="https://static.dicionariodenomesproprios.com.br/upload/facebook/t/thifany.png" target="_blank">seu nome</a> significa: "revelação de Deus" ou "manifestação de Deus" e posso afirmar que o irmão Almir e a Irmã Cida foram guiados ao te dar esse nome, pois você realmente transmite isso na vida de todo aquele que tem o privilégio de te conhecer.</p>
-    <p class="reveal">Às vezes eu não sei muito bem como te dizer ou demonstrar tudo que eu sinto por você meu amor, podendo ser chato, irritante e beeem grudento, mas tudo isso é porque eu TE AMOO MUITO e quero te fazer muito feliz.</p>
-    <p class="reveal">Sei que não sou o mais inteligente, com as melhores condições, o melhor músico e, definitivamente, não sou o mais bonito e existem inúmeros outros com algumas ou até mesmo todas essas qualidades que certamente já sentiram o mesmo que eu ao te ver pela primeira vez, afinal é impossivel não se apaixonar por você meu bem, porém, minha joia tão preciosa e perfeita eu te amo muito, pois tive a oportunidade de te conhecer em diferentes humores, fases e personalidades, com isso sei que o que sinto por você é sincero e verdadeiro, algo que pude sentir pela primeira vez na vida e quero continuar sentindo.</p>
-    <p class="reveal">Entendo que você talvez precise de espaço e não quero te sufocar nem forçar a nada, pois sei que existem diversas coisas que podem nos afastar, mas eu particularmente creio que com fé em Deus podemos superar tudo isso e seguirmos juntos nesse caminho tão santo que o senhor tem nós colocado.</p>
-    <p class="reveal">Se eu tiver de esperar eu espero meu amor, mas apenas quero ter a certeza de que está tudo bem entre nós e se errei em algo que você me diga para que eu possa me desculpar e voltar a ver o seu sorriso tão especial que alegra e aquece tanto o meu coração.</p>
-    <p class="reveal">Eu estava precisando revisar alguns conceitos de desenvolvimento web, porém você não saí da minha cabeça então decidi unir o útil ao agradável e desenvolver um pequeno site contendo a descrição dessa carta (caso você não entenda a minha letra), espero que você goste é possivel acessar escaneando o QR Code.</p>
-    <p class="reveal">Que Deus te abençoe sempre! Eu te amooo muito e espero tê-la de volta na minha vida muito em breve.</p>
-    <p class="reveal">A PAZ DE DEUS (me responde com "amém" no whats quando receber)</p>
-    <p class="reveal">Com muito amor e saudades,</p>
-    <p class="reveal">Vinicíus Ryan Rodrigues Pereira.</p>
-    <button id="final-btn">TE AMOOO!💘</button>
-  </section>
- <script src="script.js"></script>
-<!-- Tela de senha -->
-<div id="senha-overlay">
-  <div id="senha-box">
-    <h2>Digite a senha</h2>
-    <input type="password" id="senha-input" placeholder="Senha">
-    <button onclick="verificarSenha()">Entrar</button>
-    <p id="erro"></p>
+  <div id="dvd">
+    ERROR_404: A página que você está procurando foi removida, deletada ou provavelmente... nunca existiu
   </div>
-</div>
+
+  <script src="script.js"></script>
 </body>
 </html>
