--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>ERROR 404 - DVD Screensaver</title>
-  <link rel="stylesheet" href="style.css">
+
+  <style>
+    /* Reset básico */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+      background-color: #000;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    #dvd {
+      position: absolute;
+      color: white;
+      font-size: 22px;
+      font-weight: bold;
+      text-align: center;
+      line-height: 1.4;
+      white-space: nowrap;
+      user-select: none;
+      pointer-events: none;
+    }
+  </style>
 </head>
 <body>
 
@@ -11,6 +39,67 @@
     ERROR_404: A página que você está procurando foi removida, deletada ou provavelmente... nunca existiu
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    const dvd = document.getElementById("dvd");
+
+    let x = Math.random() * (window.innerWidth - dvd.offsetWidth);
+    let y = Math.random() * (window.innerHeight - dvd.offsetHeight);
+
+    let speedX = 2.5;
+    let speedY = 2.5;
+
+    function randomColor() {
+      const r = Math.floor(Math.random() * 256);
+      const g = Math.floor(Math.random() * 256);
+      const b = Math.floor(Math.random() * 256);
+      return `rgb(${r}, ${g}, ${b})`;
+    }
+
+    function animate() {
+      x += speedX;
+      y += speedY;
+
+      // Borda direita
+      if (x + dvd.offsetWidth >= window.innerWidth) {
+        x = window.innerWidth - dvd.offsetWidth;
+        speedX *= -1;
+        dvd.style.color = randomColor();
+      }
+
+      // Borda esquerda
+      if (x <= 0) {
+        x = 0;
+        speedX *= -1;
+        dvd.style.color = randomColor();
+      }
+
+      // Borda inferior
+      if (y + dvd.offsetHeight >= window.innerHeight) {
+        y = window.innerHeight - dvd.offsetHeight;
+        speedY *= -1;
+        dvd.style.color = randomColor();
+      }
+
+      // Borda superior
+      if (y <= 0) {
+        y = 0;
+        speedY *= -1;
+        dvd.style.color = randomColor();
+      }
+
+      dvd.style.transform = `translate(${x}px, ${y}px)`;
+
+      requestAnimationFrame(animate);
+    }
+
+    // Ajusta posição ao redimensionar
+    window.addEventListener("resize", () => {
+      x = Math.min(x, window.innerWidth - dvd.offsetWidth);
+      y = Math.min(y, window.innerHeight - dvd.offsetHeight);
+    });
+
+    animate();
+  </script>
+
 </body>
 </html>
